# nonebot-plugin-majsoul

./: .gitignore  README.md  majsoul_pt_plot.ipynb  pyproject.toml
.github/workflows/: pr-check.yml  release.yml
src/nonebot_plugin_majsoul/: __init__.py  ac.py  config.py  errors.py
src/nonebot_plugin_majsoul/binding/: __init__.py
src/nonebot_plugin_majsoul/data/: account_binding.py  api.py
src/nonebot_plugin_majsoul/data/migrations/: a3865d6ed01e_init_db.py
src/nonebot_plugin_majsoul/data/models/: constants.py  player_info.py  player_num.py  player_rank.py  player_stats.py
src/nonebot_plugin_majsoul/handlers/: query_majsoul_info.py
src/nonebot_plugin_majsoul/handlers/interceptors/: handle_error.py
src/nonebot_plugin_majsoul/interceptors/: handle_error.py
src/nonebot_plugin_majsoul/mappers/: player_num.py  player_rank.py  player_stats.py  room_rank.py
src/nonebot_plugin_majsoul/network/: auto_retry.py  host_prober.py
src/nonebot_plugin_majsoul/paifuya/: __init__.py  query_majsoul_info.py  query_majsoul_pt_plot.py  query_majsoul_records.py
src/nonebot_plugin_majsoul/paifuya/data/: api.py
src/nonebot_plugin_majsoul/paifuya/data/models/: game_record.py  player_extended_stats.py  player_info.py  player_rank.py  player_stats.py  room_rank.py
src/nonebot_plugin_majsoul/paifuya/mappers/: game_record.py  general.py  player_extended_stats.py  player_num.py  player_rank.py  player_stats.py  room_rank.py
src/nonebot_plugin_majsoul/paifuya/parsers/: limit_of_games.py  name.py  room_rank.py  time_span.py
src/nonebot_plugin_majsoul/paipu/: __init__.py  downloader.py  query_paipu.py
src/nonebot_plugin_majsoul/parsers/: limit_of_games.py  room_rank.py  time_span.py
src/nonebot_plugin_majsoul/utils/: my_executor.py  nonebot.py  percentile.py  rank.py  send_message.py  user.py
src/tests/: conftest.py  test_load.py
